@@ -32,12 +32,15 @@
  * @version $Id$
  */
 class ZMThemeDummyPatch extends ZMFilePatch {
+    private $includeDefault_;
+
 
     /**
      * Create new instance.
      */
     function __construct() {
         parent::__construct('themeDummies');
+        $this->includeDefault_ = true;
     }
 
     /**
@@ -55,7 +58,7 @@ class ZMThemeDummyPatch extends ZMFilePatch {
      */
     function isOpen() {
         foreach (ZMThemes::instance()->getThemeInfoList() as $themeInfo) {
-            if (ZM_DEFAULT_THEME == $themeInfo->getThemeId()) {
+            if (ZM_DEFAULT_THEME == $themeInfo->getThemeId() && !$this->includeDefault_) {
                 continue;
             }
             if (!file_exists(DIR_FS_CATALOG_TEMPLATES.$themeInfo->getThemeId())) {
@@ -110,7 +113,7 @@ class ZMThemeDummyPatch extends ZMFilePatch {
         }
 
         foreach (ZMThemes::instance()->getThemeInfoList() as $themeInfo) {
-            if (ZM_DEFAULT_THEME == $themeInfo->getThemeId()) {
+            if (ZM_DEFAULT_THEME == $themeInfo->getThemeId() && !$this->includeDefault_) {
                 continue;
             }
             if (!file_exists(DIR_FS_CATALOG_TEMPLATES.$themeInfo->getThemeId())) {
